# StackCoin

./: .dockerignore  .editorconfig  .env.dist  .formatter.exs  .gitattributes  .gitignore  .tool-versions  CrystalLogHandler.html  Dockerfile  README.md  StackCoin.html  bot.cr  coin.cr  compose.yaml  docker-compose.yml  index.html  index.json  justfile  mix.exs  new-schema.sql  old-schema.sql  openapi.json  schema.md  search-index.js  shard.yml  supervisord.conf  test.cr
.github/workflows/: build-and-push.yml  build.yml  crystal.yml  deploy.yml
StackCoin/: Api.html  Auth.html  Bank.html  Banned.html  Bot.html  Config.html  Database.html  DesignatedChannel.html  Result.html  Statistics.html
StackCoin/Api/: Auth.html  Context.html  Ledger.html  Root.html  Route.html  User.html
StackCoin/Auth/: Result.html
StackCoin/Bank/: Result.html
StackCoin/Bot/: Auth.html  (+15 more)
assets/: tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: stackcoin.ex  stackcoin_web.ex
migration/: migrate.py  pyproject.toml
rel/: env.sh.eex
sql/: init.sql
src/: api.cr  bot.cr  coin.cr  db.cr  main.cr  stackcoin.cr  utils.cr
test/: test_helper.exs
test/e2e/: README.md  conftest.py  pyproject.toml  run-all.sh  test_luckypot.py  test_stackcoin_api.py  test_websocket_gateway.py
test/e2e/py/: conftest.py  pyproject.toml  test_luckypot.py  test_websocket_gateway.py
test/e2e/ts/: global-setup.ts  helpers.ts  package.json  pnpm-lock.yaml  stackcoin-client.test.ts  stackcoin-gateway.test.ts  tsconfig.json  vitest.config.ts
tools/: make-test-bot-account.cr  migrate-legacy-stackcoin.cr  muck.cr
(+260 files in other folders)
