[project]
name = "stackcoin-e2e-tests"
version = "0.1.0"
description = "End-to-end tests for StackCoin and LuckyPot"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "websockets>=13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
