[project]
name = "stackcoin-e2e-tests"
version = "0.1.0"
description = "End-to-end tests for StackCoin and LuckyPot"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "websockets>=13.0",
    "luckypot",
    "stackcoin",
]

[tool.uv.sources]
luckypot = { path = "../../tmp/LuckyPot", editable = true }
stackcoin = { path = "../../tmp/stackcoin-python/stackcoin", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
